--- a/1_ReadAndConvertFromPCRasterToArray.ipynb
+++ b/1_ReadAndConvertFromPCRasterToArray.ipynb
@@ -39,7 +39,18 @@
    "execution_count": 2,
    "id": "802313b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "879"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "path =r'D:\\pythonDATA\\AquadaptTemez\\rastermapaccum'\n",
     "filenames = glob.glob(path + \"/*.map\")\n",
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "0942f74f",
    "metadata": {},
    "outputs": [
@@ -58,7 +69,7 @@
        "48694800"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,23 +89,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "012e5efd",
+   "cell_type": "markdown",
+   "id": "facb1ff9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# We cannot process all the data efficiently, and besides we are interested mainly on data in the river cells, therefore we can \n",
-    "# use a clone map with a filter. This map has 1 as river cells and 0 as non-river cells. Therefore, the processing will be optimizes\n",
-    "# solely for the river cells. "
+    "We cannot process all the data efficiently, and besides we are interested mainly on data in the river cells, therefore we can use a clone map with a filter. This map has 1 as river cells and 0 as non-river cells. Therefore, the processing will be optimizes solely for the river cells. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "c8482c37",
+   "execution_count": 4,
+   "id": "7f1f27f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[nan, nan, nan, ..., nan, nan, nan]], dtype=float32)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pathfilter =r'C:\\Users\\User\\OneDrive\\IST\\RESEARCH\\python\\flowindicatorsmap\\rivernetworkabove5000mm2.map'\n",
     "mapfilter = readmap(pathfilter)\n",
@@ -112,15 +130,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "e3438b58",
+   "execution_count": 5,
+   "id": "025ee9d7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We reduce the field to perform the computation from: 48694800 to 2477898\n"
+      "We initially had a total of: 48694800 cells, however only 2477898 refers indeed for river cells\n"
      ]
     }
    ],
@@ -130,18 +148,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "10020314",
    "metadata": {},
    "outputs": [],
    "source": [
     "# We create an array with the total number of non NaNs as columns and the total months as rows:\n",
-    "runofftsarray = np.zeros((len(filenames),newnumtotal),dtype=np.float16)"
+    "runofftsarray = np.zeros((len(filenames),newnumtotal))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1918f37a",
+   "id": "c9df8e10",
    "metadata": {},
    "source": [
     "This loop will read each month (.map file) transform it in a array, and exctract solely the river cells data for our runofftsarray:"
@@ -149,17 +167,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "id": "2bfaefe3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for mapfile in filenames:\n",
+    "for mapfile in filenames[10:11]:\n",
     "\n",
     "    \n",
     "    namewithmap = os.path.basename(mapfile)\n",
     "    namemap = namewithmap.replace(\".map\", \"\")\n",
     "    namemap = namemap.replace(\"T\", \"\")\n",
+    "    namemap = namemap.replace(\"accum\", \"\")\n",
     "    \n",
     "    # The files are not organized in order when they are read, therefore we will make a way to write each line in the correct line of the geral\n",
     "    namemapint = int(namemap) - 1 \n",
@@ -175,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db0a7c34",
+   "id": "0b02864d",
    "metadata": {},
    "source": [
     "Finally, the time-series matrix is saved as a CSV file to be further analysed"
@@ -183,12 +202,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "bc99e052",
+   "execution_count": 12,
+   "id": "81bbddf2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt('D:\\pythonDATA\\AquadaptTemez\\runofftsarray.csv', runofftsarray, delimiter=',')"
+    "np.savetxt(r'D:\\pythonDATA\\AquadaptTemez\\runofftsarray.csv', runofftsarray, delimiter=',')"
    ]
   }
  ],
