--- a/9_ConvertFromArrayToGeoTIFF.ipynb
+++ b/9_ConvertFromArrayToGeoTIFF.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "dcb4e3f0",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "802313b2",
    "metadata": {},
    "outputs": [
@@ -69,10 +69,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "8d60c745",
+   "execution_count": 4,
+   "id": "57ac3c8d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9320.47363281, 30624.4140625 , 34175.0703125 , ...,\n",
+       "        19067.73242188, 46729.2421875 , 77826.0390625 ]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Importation of the arrays used for the calculations::\n",
     "\n",
@@ -81,26 +93,16 @@
     "    \n",
     "resarray = np.array(resmatrix)\n",
     "resarray = resarray.T\n",
-    "#mapfilterarrayres = np.reshape(mapfilterarray, (1, numtotal))"
+    "\n",
+    "resarray"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "dccc3484",
+   "execution_count": 5,
+   "id": "ff101adc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[nan, nan, nan, ..., nan, nan, nan]], dtype=float32)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# At this point we have to recriate the complete array, since it was filtered for the computation of the indicators, then:\n",
     "\n",
@@ -118,19 +120,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "ccb6de19",
+   "execution_count": 16,
+   "id": "8dcda8ad",
    "metadata": {},
    "outputs": [],
    "source": [
     "# We first create a matrix with the total dimensions of the original raster:\n",
-    "resultarraytotal = np.zeros((1,numtotal),dtype=np.float16)"
+    "resultarraytotal = np.zeros((1,numtotal),dtype=np.float32)\n",
+    "resultarraytotal[:,:] = np.nan\n",
+    "#resultarraytotal[:,:] = -9999 # We can use -9999 as NaN values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "b366862c",
+   "execution_count": 17,
+   "id": "626a4b4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,8 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "d086e650",
+   "execution_count": 18,
+   "id": "bfe9546d",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +156,7 @@
        "(7140, 6820)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,29 +168,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "id": "c19680be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Finally we write down the results as a Raster file (Tif)\n",
-    "pathoutput = r'D:\\pythonDATA\\AquadaptTemez\\myraster.tif'\n",
+    "# We create a function to write down the MATRIX into a Raster:\n",
     "\n",
-    "output_raster = gdal.GetDriverByName('GTiff').Create(pathoutput,ncols, nrows, 1 ,gdal.GDT_Float32)  # Open the file\n",
-    "output_raster.SetGeoTransform(geotransform)  # Specify its coordinates\n",
-    "srs = osr.SpatialReference()                 # Establish its coordinate encoding\n",
-    "srs.ImportFromEPSG(3763)                                                                                                               \n",
-    "output_raster.SetProjection( srs.ExportToWkt() )   # Exports the coordinate system \n",
+    "def WriteFromArrayToGTIFF(resultmatrixtotal, geotransform, pathoutput):\n",
+    "\n",
+    "    output_raster = gdal.GetDriverByName('GTiff').Create(pathoutput,ncols, nrows, 1 ,gdal.GDT_Float32)  # Open the file\n",
+    "    output_raster.SetGeoTransform(geotransform)  # Specify its coordinates\n",
+    "    srs = osr.SpatialReference()                 # Establish its coordinate encoding\n",
+    "    srs.ImportFromEPSG(3763)                                                                                                               \n",
+    "    output_raster.SetProjection( srs.ExportToWkt() )   # Exports the coordinate system \n",
     "                                                   # to the file\n",
-    "output_raster.GetRasterBand(1).WriteArray(resultmatrixtotal)   # Writes my array to the raster\n",
+    "    output_raster.GetRasterBand(1).WriteArray(resultmatrixtotal)   # Writes my array to the raster\n",
     "\n",
-    "output_raster.FlushCache()"
+    "    output_raster.FlushCache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3650d4fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Finally we write down the results as a Raster file (Tif)\n",
+    "pathoutput = r'D:\\pythonDATA\\AquadaptTemez\\myraster2.tif'\n",
+    "WriteFromArrayToGTIFF(resultmatrixtotal, geotransform, pathoutput)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9348419",
+   "id": "d1a3b3e8",
    "metadata": {},
    "outputs": [],
    "source": []
