--- a/1_ReadAndConvertFromPCRasterToArray.ipynb
+++ b/1_ReadAndConvertFromPCRasterToArray.ipynb
@@ -31,7 +31,8 @@
     "from osgeo import osr\n",
     "import matplotlib.pylab as plt\n",
     "import subprocess\n",
-    "import glob,os"
+    "import glob,os\n",
+    "import time"
    ]
   },
   {
@@ -43,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "879"
+       "1032"
       ]
      },
      "execution_count": 2,
@@ -114,7 +115,7 @@
     }
    ],
    "source": [
-    "pathfilter =r'C:\\Users\\User\\OneDrive\\IST\\RESEARCH\\python\\flowindicatorsmap\\rivernetworkabove5000mm2.map'\n",
+    "pathfilter =r'C:\\Users\\User\\OneDrive\\IST\\RESEARCH\\python\\flowindicatorsmap\\rivernetworkabove5000mmclipped.map'\n",
     "mapfilter = readmap(pathfilter)\n",
     "Rastermapfilter = gdal.Open(pathfilter)\n",
     "mapfilterarray = pcr_as_numpy(mapfilter)\n",
@@ -138,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We initially had a total of: 48694800 cells, however only 2477898 refers indeed for river cells\n"
+      "We initially had a total of: 48694800 cells, however only 2301110 refers indeed for river cells\n"
      ]
     }
    ],
@@ -154,7 +155,7 @@
    "outputs": [],
    "source": [
     "# We create an array with the total number of non NaNs as columns and the total months as rows:\n",
-    "runofftsarray = np.zeros((len(filenames),newnumtotal))"
+    "runofftsarray = np.zeros((len(filenames),newnumtotal),dtype=np.float32)"
    ]
   },
   {
@@ -167,29 +168,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "2bfaefe3",
+   "execution_count": 8,
+   "id": "660c93a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2048.7474298477173\n"
+     ]
+    }
+   ],
    "source": [
-    "for mapfile in filenames[10:11]:\n",
+    "start = time.time()\n",
+    "for mapfile in filenames:\n",
     "\n",
     "    \n",
     "    namewithmap = os.path.basename(mapfile)\n",
-    "    namemap = namewithmap.replace(\".map\", \"\")\n",
+    "    namemap = namewithmap.replace(\"accum.map\", \"\")\n",
     "    namemap = namemap.replace(\"T\", \"\")\n",
-    "    namemap = namemap.replace(\"accum\", \"\")\n",
     "    \n",
     "    # The files are not organized in order when they are read, therefore we will make a way to write each line in the correct line of the geral\n",
     "    namemapint = int(namemap) - 1 \n",
     "    \n",
-    "    mapread = readmap(mapfile)\n",
-    "    mapreadarray = pcr_as_numpy(mapread)\n",
+    "     \n",
+    "    mapreadarray = pcr_as_numpy(readmap(mapfile))\n",
     "    mapreadarrayres = np.reshape(mapreadarray, (1, numtotal))\n",
     "    \n",
     "    \n",
     "    \n",
-    "    runofftsarray[namemapint,:] = mapreadarrayres[~np.isnan(mapfilterarrayres)]"
+    "    runofftsarray[namemapint,:] = mapreadarrayres[~np.isnan(mapfilterarrayres)]\n",
+    "end = time.time()\n",
+    "print(end - start)"
    ]
   },
   {
@@ -202,13 +213,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "81bbddf2",
    "metadata": {},
    "outputs": [],
    "source": [
     "np.savetxt(r'D:\\pythonDATA\\AquadaptTemez\\runofftsarray.csv', runofftsarray, delimiter=',')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cab85d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
