Functions added and some alterations

--- a/9_ConvertFromArrayToGeoTIFF.ipynb
+++ b/9_ConvertFromArrayToGeoTIFF.ipynb
@@ -69,18 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "57ac3c8d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 9320.47363281, 30624.4140625 , 34175.0703125 , ...,\n",
-       "        19067.73242188, 46729.2421875 , 77826.0390625 ]])"
+       "array([[2.5, 2.5, 2.5, ..., 4. , 4. , 4. ]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +87,7 @@
    "source": [
     "# Importation of the arrays used for the calculations::\n",
     "\n",
-    "path =r'C:\\Users\\User\\OneDrive\\IST\\RESEARCH\\python\\flowindicatorsmap\\resMax.csv'\n",
+    "path =r'C:\\Users\\User\\OneDrive\\IST\\RESEARCH\\1_flowindicators\\gis\\csvs\\nummonzerrunperc25.csv'\n",
     "resmatrix=pd.read_table(path, header = None)   \n",
     "    \n",
     "resarray = np.array(resmatrix)\n",
@@ -99,7 +98,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
+   "id": "ee6f4797",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>578970</th>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>578971</th>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>578972</th>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>578973</th>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>578974</th>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>578975 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0\n",
+       "0       2.5\n",
+       "1       2.5\n",
+       "2       2.5\n",
+       "3       2.5\n",
+       "4       2.5\n",
+       "...     ...\n",
+       "578970  4.0\n",
+       "578971  4.0\n",
+       "578972  4.0\n",
+       "578973  4.0\n",
+       "578974  4.0\n",
+       "\n",
+       "[578975 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resmatrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "39160c02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.nanmax(resmatrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "ff101adc",
    "metadata": {},
    "outputs": [],
@@ -107,7 +233,12 @@
     "# At this point we have to recriate the complete array, since it was filtered for the computation of the indicators, then:\n",
     "\n",
     "# First we read our previous used filter map:\n",
-    "pathfilter =r'C:\\Users\\User\\OneDrive\\IST\\RESEARCH\\python\\flowindicatorsmap\\rivernetworkabove5000mm2.map'\n",
+    "#pathfilter =r'C:\\Users\\User\\OneDrive\\IST\\RESEARCH\\python\\flowindicatorsmap\\rivernetworkabove50000mmclipped2.map'\n",
+    "pathfilter =r'C:\\Users\\User\\OneDrive\\IST\\RESEARCH\\python\\flowindicatorsmap\\rivernetworkabove100000mmclipped.map'\n",
+    "\n",
+    "# MK, 2,4 and 5: 50,000\n",
+    "# 1 and 3: 100,000\n",
+    "\n",
     "mapfilter = readmap(pathfilter)\n",
     "Rastermapfilter = gdal.Open(pathfilter)\n",
     "mapfilterarray = pcr_as_numpy(mapfilter)\n",
@@ -120,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "8dcda8ad",
    "metadata": {},
    "outputs": [],
@@ -133,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "626a4b4f",
    "metadata": {},
    "outputs": [],
@@ -146,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "bfe9546d",
    "metadata": {},
    "outputs": [
@@ -156,7 +287,7 @@
        "(7140, 6820)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "c19680be",
    "metadata": {},
    "outputs": [],
@@ -190,13 +321,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "3650d4fb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Finally we write down the results as a Raster file (Tif)\n",
-    "pathoutput = r'D:\\pythonDATA\\AquadaptTemez\\myraster2.tif'\n",
+    "pathoutput = r'C:\\Users\\User\\OneDrive\\IST\\RESEARCH\\1_flowindicators\\gis\\rasters\\nummonzerrunperc25.tif'\n",
     "WriteFromArrayToGTIFF(resultmatrixtotal, geotransform, pathoutput)"
    ]
   },
@@ -204,6 +335,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d1a3b3e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1bd6f86",
    "metadata": {},
    "outputs": [],
    "source": []
